--- a/DOTNETCORE/ASP.NETCore/v3.1/AutoLot/AutoLot.Mvc/wwwroot/lib/bootstrap/css/bootstrap.css
+++ b/DOTNETCORE/ASP.NETCore/v3.1/AutoLot/AutoLot.Mvc/wwwroot/lib/bootstrap/css/bootstrap.css
@@ -2287,24 +2287,24 @@ textarea.form-control {
   display: block;
 }
 
-.was-validated .custom-control-input:valid ~ .custom-control-label, .custom-control-input.is-valid ~ .custom-control-label {
+.was-validated .custom-control-input:valid ~ .custom-col-form-label, .custom-control-input.is-valid ~ .custom-col-form-label {
   color: #28a745;
 }
 
-.was-validated .custom-control-input:valid ~ .custom-control-label::before, .custom-control-input.is-valid ~ .custom-control-label::before {
+.was-validated .custom-control-input:valid ~ .custom-col-form-label::before, .custom-control-input.is-valid ~ .custom-col-form-label::before {
   border-color: #28a745;
 }
 
-.was-validated .custom-control-input:valid:checked ~ .custom-control-label::before, .custom-control-input.is-valid:checked ~ .custom-control-label::before {
+.was-validated .custom-control-input:valid:checked ~ .custom-col-form-label::before, .custom-control-input.is-valid:checked ~ .custom-col-form-label::before {
   border-color: #34ce57;
   background-color: #34ce57;
 }
 
-.was-validated .custom-control-input:valid:focus ~ .custom-control-label::before, .custom-control-input.is-valid:focus ~ .custom-control-label::before {
+.was-validated .custom-control-input:valid:focus ~ .custom-col-form-label::before, .custom-control-input.is-valid:focus ~ .custom-col-form-label::before {
   box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.25);
 }
 
-.was-validated .custom-control-input:valid:focus:not(:checked) ~ .custom-control-label::before, .custom-control-input.is-valid:focus:not(:checked) ~ .custom-control-label::before {
+.was-validated .custom-control-input:valid:focus:not(:checked) ~ .custom-col-form-label::before, .custom-control-input.is-valid:focus:not(:checked) ~ .custom-col-form-label::before {
   border-color: #28a745;
 }
 
@@ -2388,24 +2388,24 @@ textarea.form-control {
   display: block;
 }
 
-.was-validated .custom-control-input:invalid ~ .custom-control-label, .custom-control-input.is-invalid ~ .custom-control-label {
+.was-validated .custom-control-input:invalid ~ .custom-col-form-label, .custom-control-input.is-invalid ~ .custom-col-form-label {
   color: #dc3545;
 }
 
-.was-validated .custom-control-input:invalid ~ .custom-control-label::before, .custom-control-input.is-invalid ~ .custom-control-label::before {
+.was-validated .custom-control-input:invalid ~ .custom-col-form-label::before, .custom-control-input.is-invalid ~ .custom-col-form-label::before {
   border-color: #dc3545;
 }
 
-.was-validated .custom-control-input:invalid:checked ~ .custom-control-label::before, .custom-control-input.is-invalid:checked ~ .custom-control-label::before {
+.was-validated .custom-control-input:invalid:checked ~ .custom-col-form-label::before, .custom-control-input.is-invalid:checked ~ .custom-col-form-label::before {
   border-color: #e4606d;
   background-color: #e4606d;
 }
 
-.was-validated .custom-control-input:invalid:focus ~ .custom-control-label::before, .custom-control-input.is-invalid:focus ~ .custom-control-label::before {
+.was-validated .custom-control-input:invalid:focus ~ .custom-col-form-label::before, .custom-control-input.is-invalid:focus ~ .custom-col-form-label::before {
   box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25);
 }
 
-.was-validated .custom-control-input:invalid:focus:not(:checked) ~ .custom-control-label::before, .custom-control-input.is-invalid:focus:not(:checked) ~ .custom-control-label::before {
+.was-validated .custom-control-input:invalid:focus:not(:checked) ~ .custom-col-form-label::before, .custom-control-input.is-invalid:focus:not(:checked) ~ .custom-col-form-label::before {
   border-color: #dc3545;
 }
 
@@ -2488,7 +2488,7 @@ textarea.form-control {
     -ms-flex-pack: center;
     justify-content: center;
   }
-  .form-inline .custom-control-label {
+  .form-inline .custom-col-form-label {
     margin-bottom: 0;
   }
 }
@@ -3767,41 +3767,41 @@ input[type="button"].btn-block {
   opacity: 0;
 }
 
-.custom-control-input:checked ~ .custom-control-label::before {
+.custom-control-input:checked ~ .custom-col-form-label::before {
   color: #fff;
   border-color: #007bff;
   background-color: #007bff;
 }
 
-.custom-control-input:focus ~ .custom-control-label::before {
+.custom-control-input:focus ~ .custom-col-form-label::before {
   box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 }
 
-.custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
+.custom-control-input:focus:not(:checked) ~ .custom-col-form-label::before {
   border-color: #80bdff;
 }
 
-.custom-control-input:not(:disabled):active ~ .custom-control-label::before {
+.custom-control-input:not(:disabled):active ~ .custom-col-form-label::before {
   color: #fff;
   background-color: #b3d7ff;
   border-color: #b3d7ff;
 }
 
-.custom-control-input[disabled] ~ .custom-control-label, .custom-control-input:disabled ~ .custom-control-label {
+.custom-control-input[disabled] ~ .custom-col-form-label, .custom-control-input:disabled ~ .custom-col-form-label {
   color: #6c757d;
 }
 
-.custom-control-input[disabled] ~ .custom-control-label::before, .custom-control-input:disabled ~ .custom-control-label::before {
+.custom-control-input[disabled] ~ .custom-col-form-label::before, .custom-control-input:disabled ~ .custom-col-form-label::before {
   background-color: #e9ecef;
 }
 
-.custom-control-label {
+.custom-col-form-label {
   position: relative;
   margin-bottom: 0;
   vertical-align: top;
 }
 
-.custom-control-label::before {
+.custom-col-form-label::before {
   position: absolute;
   top: 0.25rem;
   left: -1.5rem;
@@ -3814,7 +3814,7 @@ input[type="button"].btn-block {
   border: #adb5bd solid 1px;
 }
 
-.custom-control-label::after {
+.custom-col-form-label::after {
   position: absolute;
   top: 0.25rem;
   left: -1.5rem;
@@ -3825,40 +3825,40 @@ input[type="button"].btn-block {
   background: no-repeat 50% / 50% 50%;
 }
 
-.custom-checkbox .custom-control-label::before {
+.custom-checkbox .custom-col-form-label::before {
   border-radius: 0.25rem;
 }
 
-.custom-checkbox .custom-control-input:checked ~ .custom-control-label::after {
+.custom-checkbox .custom-control-input:checked ~ .custom-col-form-label::after {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z'/%3e%3c/svg%3e");
 }
 
-.custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
+.custom-checkbox .custom-control-input:indeterminate ~ .custom-col-form-label::before {
   border-color: #007bff;
   background-color: #007bff;
 }
 
-.custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
+.custom-checkbox .custom-control-input:indeterminate ~ .custom-col-form-label::after {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3e%3cpath stroke='%23fff' d='M0 2h4'/%3e%3c/svg%3e");
 }
 
-.custom-checkbox .custom-control-input:disabled:checked ~ .custom-control-label::before {
+.custom-checkbox .custom-control-input:disabled:checked ~ .custom-col-form-label::before {
   background-color: rgba(0, 123, 255, 0.5);
 }
 
-.custom-checkbox .custom-control-input:disabled:indeterminate ~ .custom-control-label::before {
+.custom-checkbox .custom-control-input:disabled:indeterminate ~ .custom-col-form-label::before {
   background-color: rgba(0, 123, 255, 0.5);
 }
 
-.custom-radio .custom-control-label::before {
+.custom-radio .custom-col-form-label::before {
   border-radius: 50%;
 }
 
-.custom-radio .custom-control-input:checked ~ .custom-control-label::after {
+.custom-radio .custom-control-input:checked ~ .custom-col-form-label::after {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
 }
 
-.custom-radio .custom-control-input:disabled:checked ~ .custom-control-label::before {
+.custom-radio .custom-control-input:disabled:checked ~ .custom-col-form-label::before {
   background-color: rgba(0, 123, 255, 0.5);
 }
 
@@ -3866,14 +3866,14 @@ input[type="button"].btn-block {
   padding-left: 2.25rem;
 }
 
-.custom-switch .custom-control-label::before {
+.custom-switch .custom-col-form-label::before {
   left: -2.25rem;
   width: 1.75rem;
   pointer-events: all;
   border-radius: 0.5rem;
 }
 
-.custom-switch .custom-control-label::after {
+.custom-switch .custom-col-form-label::after {
   top: calc(0.25rem + 2px);
   left: calc(-2.25rem + 2px);
   width: calc(1rem - 4px);
@@ -3886,18 +3886,18 @@ input[type="button"].btn-block {
 }
 
 @media (prefers-reduced-motion: reduce) {
-  .custom-switch .custom-control-label::after {
+  .custom-switch .custom-col-form-label::after {
     transition: none;
   }
 }
 
-.custom-switch .custom-control-input:checked ~ .custom-control-label::after {
+.custom-switch .custom-control-input:checked ~ .custom-col-form-label::after {
   background-color: #fff;
   -webkit-transform: translateX(0.75rem);
   transform: translateX(0.75rem);
 }
 
-.custom-switch .custom-control-input:disabled:checked ~ .custom-control-label::before {
+.custom-switch .custom-control-input:disabled:checked ~ .custom-col-form-label::before {
   background-color: rgba(0, 123, 255, 0.5);
 }
 
@@ -4197,14 +4197,14 @@ input[type="button"].btn-block {
   background-color: #adb5bd;
 }
 
-.custom-control-label::before,
+.custom-col-form-label::before,
 .custom-file-label,
 .custom-select {
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 @media (prefers-reduced-motion: reduce) {
-  .custom-control-label::before,
+  .custom-col-form-label::before,
   .custom-file-label,
   .custom-select {
     transition: none;
