--- a/DOTNETCORE/ASP.NETCore/v3.1/AutoLot/AutoLot.Web/Pages/Cars/Create.cshtml
+++ b/DOTNETCORE/ASP.NETCore/v3.1/AutoLot/AutoLot.Web/Pages/Cars/Create.cshtml
@@ -6,36 +6,17 @@
 }
 
 <h1>Create</h1>
-
-<h4>Car</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <form asp-page="Create">
+            @Html.EditorFor(x => x.Car, new { Makes = Model.Makes })
             <div class="form-group">
-                <label asp-for="Car.MakeId" class="control-label"></label>
-                <select asp-for="Car.MakeId" class ="form-control" asp-items="ViewBag.MakeId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="Car.Color" class="control-label"></label>
-                <input asp-for="Car.Color" class="form-control" />
-                <span asp-validation-for="Car.Color" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Car.PetName" class="control-label"></label>
-                <input asp-for="Car.PetName" class="form-control" />
-                <span asp-validation-for="Car.PetName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <button type="submit" class="btn btn-primary">Create <i class="fas fa-add"></i></button>&nbsp;&nbsp;|&nbsp;&nbsp;
+                <a asp-page="./Index" class="text-info">Back to List <i class="fas fa-list"></i></a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-page="Index">Back to List</a>
 </div>
 
 @section Scripts {
