--- a/DOTNETCORE/ASP.NETCore/v3.1/AutoLot/AutoLot.Web/Pages/Cars/Details.cshtml
+++ b/DOTNETCORE/ASP.NETCore/v3.1/AutoLot/AutoLot.Web/Pages/Cars/Details.cshtml
@@ -5,39 +5,14 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Details for @Model.Car.PetName</h1>
+
+@Html.DisplayFor(m=>m.Car)
+@Html.DisplayFor(m=>m.Car,"CarWithColors")
 
 <div>
-    <h4>Car</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Car.MakeNavigation)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Car.MakeNavigation.Name)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Car.Color)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Car.Color)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Car.PetName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Car.PetName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Car.TimeStamp)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Car.TimeStamp)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-page="./Edit" asp-route-id="@Model.Car.Id">Edit</a> |
+    <edit-car car-id="@Model.Car.Id"></edit-car> |
+    <delete-car car-id="@Model.Car.Id"></delete-car> |
     <a asp-page="./Index">Back to List</a>
 </div>
+
