--- a/DOTNETCORE/ASP.NETCore/v3.1/AutoLot/AutoLot.Web/Pages/Cars/Edit.cshtml
+++ b/DOTNETCORE/ASP.NETCore/v3.1/AutoLot/AutoLot.Web/Pages/Cars/Edit.cshtml
@@ -5,39 +5,20 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
-<h4>Car</h4>
+<h1>Edit @Model.Car.PetName</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Car.MakeId" class="control-label"></label>
-                <select asp-for="Car.MakeId" class="form-control" asp-items="ViewBag.MakeId"></select>
-                <span asp-validation-for="Car.MakeId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Car.Color" class="control-label"></label>
-                <input asp-for="Car.Color" class="form-control" />
-                <span asp-validation-for="Car.Color" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Car.PetName" class="control-label"></label>
-                <input asp-for="Car.PetName" class="form-control" />
-                <span asp-validation-for="Car.PetName" class="text-danger"></span>
-            </div>
+        <form asp-page="Edit" asp-route-id="@Model.Car.Id">
+            @Html.EditorFor(x=>x.Car,new {Makes = Model.Makes})
             <input type="hidden" asp-for="Car.Id" />
+            <input type="hidden" asp-for="Car.TimeStamp" />
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <button type="submit" class="btn btn-primary">Save <i class="fas fa-save"></i></button>&nbsp;&nbsp;|&nbsp;&nbsp;
+                <a asp-page="./Index" class="text-info">Back to List <i class="fas fa-list"></i></a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-page="./Index">Back to List</a>
 </div>
 
 @section Scripts {
