--- a/DOTNETCORE/ASP.NETCore/v3.1/AutoLot/AutoLot.Web/Pages/Cars/EditorTemplates/Car.cshtml
+++ b/DOTNETCORE/ASP.NETCore/v3.1/AutoLot/AutoLot.Web/Pages/Cars/EditorTemplates/Car.cshtml
@@ -7,15 +7,10 @@
 </div>
 <div class="form-group">
     <label asp-for="MakeId" class="col-form-label"></label>
-    <select asp-for="MakeId" class="form-control" asp-items="ViewBag.MakeId"></select>
+    <select asp-for="MakeId" class="form-control" asp-items="ViewBag.Makes"></select>
 </div>
 <div class="form-group">
     <label asp-for="Color" class="col-form-label"></label>
     <input asp-for="Color" class="form-control"/>
     <span asp-validation-for="Color" class="text-danger"></span>
-</div>
-<div class="form-group">
-    <label asp-for="PetName" class="col-form-label"></label>
-    <input asp-for="PetName" class="form-control"/>
-    <span asp-validation-for="PetName" class="text-danger"></span>
 </div>
