--- a/DOTNETCORE/ASP.NETCore/v3.1/AutoLot/AutoLot.Web/Pages/Cars/Delete.cshtml
+++ b/DOTNETCORE/ASP.NETCore/v3.1/AutoLot/AutoLot.Web/Pages/Cars/Delete.cshtml
@@ -5,42 +5,15 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Delete @Model.Car.PetName</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this car?</h3>
 <div>
-    <h4>Car</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Car.MakeNavigation)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Car.MakeNavigation.Name)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Car.Color)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Car.Color)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Car.PetName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Car.PetName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Car.TimeStamp)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Car.TimeStamp)
-        </dd>
-    </dl>
-
-    <form method="post">
+    @Html.DisplayForModel()
+    <form asp-page="Delete" asp-route-id="@Model.Car.Id">
         <input type="hidden" asp-for="Car.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="hidden" asp-for="Car.TimeStamp" />
+        <button type="submit" class="btn btn-danger">Delete <i class="fas fa-trash"></i></button>&nbsp;&nbsp;|&nbsp;&nbsp;
         <a asp-page="./Index">Back to List</a>
     </form>
 </div>
