--- a/DOTNETCORE/ASP.NETCore/v3.1/AutoLot/AutoLot.Web/Pages/Shared/Partials/_Menu.cshtml
+++ b/DOTNETCORE/ASP.NETCore/v3.1/AutoLot/AutoLot.Web/Pages/Shared/Partials/_Menu.cshtml
@@ -30,13 +30,13 @@
                 @if (showBanner)
                 {
                     <li class="nav-item">
-                        @*<a class="nav-link text-dark" asp-controller="Home" asp-action="GrantConsent" title="Accept Cookie Policy">Accept Cookie Policy <i class="fas fa-cookie-bite"></i></a>*@
+                        <a class="nav-link text-dark" asp-page="Consent" asp-route-actionName="grant" title="Accept Cookie Policy">Accept Cookie Policy <i class="fas fa-cookie-bite"></i></a>
                     </li>
                 }
                 else
                 {
                     <li class="nav-item">
-                        @*<a class="nav-link text-dark" asp-controller="Home" asp-action="WithdrawConsent" title="Revoke Cookie Policy">Revoke Cookie Policy <i class="fas fa-cookie"></i></a>*@
+                        <a class="nav-link text-dark" asp-page="Consent" asp-route-actionName="withdraw" title="Revoke Cookie Policy">Revoke Cookie Policy <i class="fas fa-cookie"></i></a>
                     </li>
                 }
                 <li class="nav-item">
