--- a/DOTNETCORE/ASP.NETCore/v3.1/AutoLot/AutoLot.Web/Pages/Shared/_Layout.cshtml
+++ b/DOTNETCORE/ASP.NETCore/v3.1/AutoLot/AutoLot.Web/Pages/Shared/_Layout.cshtml
@@ -4,22 +4,24 @@
     <partial name="Partials/_Head"/>
 </head>
 <body>
-<header>
-    <partial name="Partials/_Menu"/>
-</header>
-<div class="container">
-    <main role="main" class="pb-3">
-        @RenderBody()
-    </main>
-</div>
+    <header>
+        <partial name="Partials/_Menu" />
+    </header>
 
-<footer class="border-top footer text-muted">
     <div class="container">
-        &copy; 2020 - AutoLot.Web.Pages - <a asp-area="" asp-page="/Privacy">Privacy</a>
+        <partial name="_CookieConsentPartial" />
+        <main role="main" class="pb-3">
+            @RenderBody()
+        </main>
     </div>
-</footer>
-    <partial name="Partials/_JavaScriptFiles"/>
 
-@RenderSection("Scripts", required: false)
+    <footer class="border-top footer text-muted">
+        <div class="container">
+            &copy; 2020 - AutoLot.Web.Pages - <a asp-area="" asp-page="/Privacy">Privacy</a>
+        </div>
+    </footer>
+    <partial name="Partials/_JavaScriptFiles" />
+
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
