--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/Areas/Admin/Views/_ViewImports.cshtml
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using AutoLot.Models.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper *, AutoLot.Mvc
+@addTagHelper *, AutoLot.Web
 @addTagHelper *, WebOptimizerCore
