--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/Views/_ViewImports.cshtml
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
-﻿@using AutoLot.Models.Entities
+﻿@using AutoLot.Mvc
+@using AutoLot.Mvc.Models
+@using AutoLot.Models.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, AutoLot.Mvc
 @addTagHelper *, WebOptimizerCore
